# jocko-willink-bot

./: .gitignore  main.py  pyproject.toml
.github/workflows/: python-lint.yaml
